Bug 1061475 - Fix crash in Loop calls on Macs due to Refresh() change. r=gcp, a=sledru