content/media/webrtc/MediaEngine.h
@@ -83,6 +83,11 @@ protected:
 class MediaEngineSource : public nsISupports
 {
 public:
+  // code inside webrtc.org assumes these sizes; don't use anything smaller
+  // without verifying it's ok
+  static const unsigned int kMaxDeviceNameLength = 128;
+  static const unsigned int kMaxUniqueIdLength = 256;
+
   virtual ~MediaEngineSource() {}
 
   /* Populate the human readable name of this device in the nsAString */
